samples/_failures_safe/1761624801_2f87a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c8449de0.c: In function ‘main’:
./samples/SAFE/__tmp_c8449de0.c:156:16: error: missing terminating " character
  156 |         printf("2. Matrix Multiplication\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c8449de0.c:156:9: error: expected expression at end of input
  156 |         printf("2. Matrix Multiplication\n
      |         ^~~~~~
./samples/SAFE/__tmp_c8449de0.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c8449de0.c:156:9: error: expected declaration or statement at end of input
